--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "titrit-technologies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,14 @@
     "@mui/material": "^7.0.2",
     "@mui/x-data-grid": "^8.0.0",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.4",
+    "axios": "^1.6.8",
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
@@ -25,9 +25,9 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "set HTTPS=true&&set SSL_CRT_FILE=cert/localhost.pem&&set SSL_KEY_FILE=cert/localhost-key.pem&&react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "set HTTPS=true&&set SSL_CRT_FILE=./localhost.pem&&set SSL_KEY_FILE=./localhost-key.pem&&set PORT=3001&&react-scripts start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -50,5 +50,8 @@
   },
   "overrides": {
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
