--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "assert": "^2.1.0",
     "axios": "^1.9.0",
     "browserify-zlib": "^0.2.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
     "i18next": "^25.0.1",
