--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "react-app-rewired": "^2.2.1"
   }
 }
