--- a/package.json
+++ b/package.json
@@ -39,7 +39,20 @@
     "start": "set HTTPS=true&&set SSL_CRT_FILE=./localhost.pem&&set SSL_KEY_FILE=./localhost-key.pem&&set PORT=3001&&react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:login": "playwright test tests/login.spec.js",
+    "test:login:mock": "playwright test tests/login.mock.spec.js",
+    "test:auth-flow": "playwright test tests/auth-flow.spec.js",
+    "test:profiles": "playwright test tests/profiles.spec.js",
+    "test:users": "playwright test tests/users.spec.js",
+    "test:all": "node tests/run-all-tests.js",
+    "test:mock-only": "playwright test tests/login.mock.spec.js",
+    "test:all:headed": "playwright test --headed",
+    "test:all:ci": "playwright test --reporter=html,github"
   },
   "eslintConfig": {
     "extends": [
@@ -63,8 +76,12 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
+    "@testing-library/cypress": "^10.0.3",
     "autoprefixer": "^10.4.14",
+    "cypress": "^14.3.3",
     "postcss": "^8.4.23",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "start-server-and-test": "^2.0.11"
   }
 }
