--- a/package.json
+++ b/package.json
@@ -3,20 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.0.0",
+    "@mui/x-date-pickers": "^8.3.1",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toggle-group": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-table": "^8.21.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.25.1",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
     "browserify-zlib": "^0.2.0",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.11.3",
     "http-proxy-middleware": "^3.0.5",
     "https-browserify": "^1.0.0",
     "i18next": "^25.0.1",
@@ -78,10 +93,11 @@
   "devDependencies": {
     "@playwright/test": "^1.52.0",
     "@testing-library/cypress": "^10.0.3",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.21",
     "cypress": "^14.3.3",
-    "postcss": "^8.4.23",
+    "postcss": "^8.5.3",
     "react-app-rewired": "^2.2.1",
-    "start-server-and-test": "^2.0.11"
+    "start-server-and-test": "^2.0.11",
+    "tailwindcss": "^4.1.6"
   }
 }
