--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "https-browserify": "^1.0.0",
     "i18next": "^25.0.1",
     "i18next-browser-languagedetector": "^8.0.5",
+    "jwt-decode": "^4.0.0",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
