--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.2",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.4",
