--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^6.1.18",
     "url": "^0.11.4",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
@@ -101,6 +101,7 @@
     "cypress": "^14.3.3",
     "postcss": "^8.5.3",
     "react-app-rewired": "^2.2.1",
+    "react-scripts": "^5.0.1",
     "start-server-and-test": "^2.0.11",
     "tailwindcss": "^4.1.6"
   }
